Added some more thoughts

--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
 - Support specification of start date and stop date
 - Default to a single day (today)
 - Support environment variable for salesforce username
+- Specify output location
+- Configuration file support for all options
